Changelog for GEMC
==================

5/6/19
 - reorg of gemc_option categories
 - only write option map out if output is specified
 - adding json format output for option map (in process)

5/1/19

 - fixed dc setting of NWIRES.
 - added flight time to tdc in dc


4/25/19

 - Richard Holmes: added FILTER_HADRONS options: when set to 1, do not write events if there are no hadrons.
   Otherwise if nonzero write only events having a hadron with matching ID. For example -FILTER_HADRONS=2212 for protons.
   Also, do not print progress if evtN hasn't changed.

4/18/19

 - added mirror hit process routine as standalone routine and bank

3/26/19

 - added FILTER_HITS options: when set to 1, do not write events if there are not hits.

3/25/19

- making sure initWithRunNumber is not loading calibration constants before activating event for all hit processes

2/25/19

 - Updated LUND documentation on Info tab

1/31/19

 - Richard Holmes: The RERUN_SELECTED option allows one to rerun multiple events whose RNG state was saved in a previous pass.

    For example, suppose there is a rare background signature of an electron between 100 MeV and 1 GeV in detector ID 1000
    and you want to visualize a few dozen such events to investigate where the background is coming from. You can do a batch
    run using

     -SAVE_SELECTED=“1000,11,100*MeV,1*GeV,trackE,./savedirectory”

	 to save the RNG states for such events into the directory ./savedirectory. They are saved in files with names like run2event1322.rndm where 2 is the run number and 1322 is the event number.
	 Then you can do an interactive run with the same gcard and option

     -RERUN_SELECTED=“2,./savedirectory”.

    Here 2 is the run number from the batch run. With this option, instead of generating new primaries as usual or reading
    them from the start of a generator input file, the same primaries as were used in the saved events are generated or read